--- a/index.html
+++ b/index.html
@@ -333,6 +333,11 @@
 
                     <p>La tendencia en los temas profesionales es crear cada vez temas más flexibles, de forma que un mismo tema se convierte en un generador de temas, son lo que se conoce como <strong>temas multipropósito</strong> clave de este tipo de temas son los editores de bloques o editores avanzados, que habitualmente son precisamente... plugins!</p>
 
+                    <h4>Temas hijos</h4>
+                    <p>Los temas hijos son un mecanismo que WordPress incorporó en la versión</p>
+
+                    https://ayudawp.com/como-crear-un-tema-hijo-en-wordpress/
+
                     <h4><span class="glyphicon glyphicon-th-large"></span> Plugins</h4>
 
                     <ul class="list-unstyled link-doc">
@@ -583,6 +588,7 @@
                         <li><a href="https://wordpress.org/plugins/really-simple-ssl/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Really Simple SSL</a></li>
                         <li><a href="https://wordpress.org/plugins/cookie-law-info/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> GDPR Cookies</a></li>
                         <li><a href="https://wordpress.org/plugins/wordfence/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> WordFence</a></li>
+                        <li><a href="https://es.wordpress.org/plugins/wps-hide-login/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> WPS Hide Login</a></li>
                         <li><a href="https://es.wordpress.org/plugins/all-in-one-wp-security-and-firewall/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> All in One WP Security & Firewall</a></li>
                         <li><a href="https://wordpress.org/plugins/better-wp-security/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> iTheme Security (Better WP Security)</a></li>
                         <li><a href="https://wordpress.org/plugins/jetpack/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> JetPack</a></li>
