Added adaditional info about child themes and plugins to guid on this process.

--- a/index.html
+++ b/index.html
@@ -334,9 +334,15 @@
                     <p>La tendencia en los temas profesionales es crear cada vez temas más flexibles, de forma que un mismo tema se convierte en un generador de temas, son lo que se conoce como <strong>temas multipropósito</strong> clave de este tipo de temas son los editores de bloques o editores avanzados, que habitualmente son precisamente... plugins!</p>
 
                     <h4>Temas hijos</h4>
-                    <p>Los temas hijos son un mecanismo que WordPress incorporó en la versión</p>
+                    <p>Los temas hijos son un mecanismo que WordPress incorporó en torno a la versión 3.4 que permiten sobrescribir un tema o parte del mismo sin perder la base de la que se parte. Esto es especialmetne útil para que cuando se actualiza el tema padre no se pierdan nuestras modificaciones, y para que las mejoras que se incluyan en el padre se trasladen al hijo.</p>
 
-                    https://ayudawp.com/como-crear-un-tema-hijo-en-wordpress/
+                    <p>Crear un tema hijo manualmente es bastante sencillo como se explica aquí, pero también existen plugins que permiten realizar el proceso de una forma "asistida":</p>
+
+                    <ul class="list-unstyled list-link">
+                        <li><a href="https://es.wordpress.org/plugins/child-theme-configurator/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Plugin Child Theme Configurator</a></li>
+                        <li><a href="https://es.wordpress.org/plugins/orbisius-child-theme-creator/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Plugin Child Theme Creator</a></li>
+                    </ul>
+
 
                     <h4><span class="glyphicon glyphicon-th-large"></span> Plugins</h4>
 
@@ -634,6 +640,7 @@
                                 <li><a href="https://wordpress.org/plugins/wordpress-popular-posts/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> WordPress Popular Posts</a></li>
                                 <li><a href="https://wordpress.org/plugins/amp/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> AMP Pages</a></li>
                                 <li><a href="https://wordpress.org/plugins/menu-image/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Menu image, icons, svg...</a></li>
+                                <li><a href="https://es.wordpress.org/plugins/filebird/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> File Bird</a></li>
                                 <li><a href="https://wordpress.org/plugins/broken-link-checker/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Broken Link Checker (también para SEO)</a></li>
                                 <li><a href="https://es.wordpress.org/plugins/coming-soon/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Coming Soon, Under Construction, Maintenance</a></li>
                                 <li><a href="https://es.wordpress.org/plugins/maintenance/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Maintenance</a></li>
