Adde image optimization plugin list.

--- a/index.html
+++ b/index.html
@@ -744,6 +744,17 @@
                                 <li><a href="https://wordpress.org/plugins/wp-super-cache/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> WP Super Caché</a></li>
                             </ul>
                         </div>
+
+                        <div class="col-xs-12 col-md-6">
+                            <h6>Optimización Imágenes</h6>
+                            <ul class="list-unstyled link-list">
+                                <li><a href="https://es.wordpress.org/plugins/wp-smushit/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Smush</a></li>
+                                <li><a href="https://es.wordpress.org/plugins/imagify/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Imagify</a></li>
+                                <li><a href="https://es.wordpress.org/plugins/tiny-compress-images/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Tiny PNG</a></li>
+                                <li><a href="https://es.wordpress.org/plugins/ewww-image-optimizer/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> EWWW Optimizer</a></li>
+
+                            </ul>
+                        </div>
                     </div>
 
 
