--- a/index.html
+++ b/index.html
@@ -634,6 +634,7 @@
                             <h6>Contenido y arquitectura</h6>
                             <ul class="list-unstyled link-list">
                                 <li><a href="https://wordpress.org/plugins/advanced-custom-fields/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Advanced Custom Fields (ACF y ACF Pro)</a></li>
+                                <li><a href="https://es.wordpress.org/plugins/list-category-posts/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> List Category Posts</a></li>
                                 <li><a href="https://wordpress.org/plugins/classic-editor/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Classic Editor</a></li>
                                 <li><a href="https://wordpress.org/plugins/siteorigin-panels/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Page Builder</a></li>
                                 <li><a href="https://wordpress.org/plugins/yet-another-related-posts-plugin/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Yet another related post plugin (YARPP)</a></li>
@@ -679,6 +680,7 @@
                             <h6>Analíticas</h6>
                             <ul class="list-unstyled link-list">
                                 <li><a href="https://wordpress.org/plugins/wp-statistics/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> WP Statistics</a></li>
+                                <li><a href="https://es.wordpress.org/plugins/google-site-kit/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Site Kit by Google</a></li>
                                 <li><a href="https://wordpress.org/plugins/ga-google-analytics/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> GA Google Analytics</a></li>
                                 <li><a href="https://wordpress.org/plugins/google-analytics-for-wordpress/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Google Analytics Dashboard</a></li>
                                 <li><a href="https://wordpress.org/plugins/duracelltomi-google-tag-manager/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Google Tag Manager for WP</a></li>
@@ -726,7 +728,7 @@
                                 <li><a href="https://wordpress.org/plugins/contact-form-7/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Contact Form 7</a></li>
                                 <li><a href="https://wordpress.org/plugins/wpforms-lite/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> WPForms Lite</a></li>
                                 <li><a href="https://es.wordpress.org/plugins/ninja-forms/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Ninja Forms</a></li>
-                                <li><a href="https://wpeverest.com/wordpress-plugins/everest-forms/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Everest Forms</a></li>
+                                <li><a href="https://es.wordpress.org/plugins/everest-forms/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Everest Forms</a></li>
                                 <li><a href="https://wordpress.org/plugins/user-registration/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> User Registration</a></li>
                                 <li><a href="https://wordpress.org/plugins/wp-mail-smtp/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> WP Mail SMTP</a></li>
                             </ul>
