Added some plugins to the plugin list

--- a/index.html
+++ b/index.html
@@ -634,19 +634,34 @@
                             <h6>Contenido y arquitectura</h6>
                             <ul class="list-unstyled link-list">
                                 <li><a href="https://wordpress.org/plugins/advanced-custom-fields/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Advanced Custom Fields (ACF y ACF Pro)</a></li>
+                                <li><a href="https://es.wordpress.org/plugins/shortcoder/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Shortcoder</a></li>
                                 <li><a href="https://es.wordpress.org/plugins/list-category-posts/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> List Category Posts</a></li>
-                                <li><a href="https://wordpress.org/plugins/classic-editor/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Classic Editor</a></li>
-                                <li><a href="https://wordpress.org/plugins/siteorigin-panels/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Page Builder</a></li>
                                 <li><a href="https://wordpress.org/plugins/yet-another-related-posts-plugin/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Yet another related post plugin (YARPP)</a></li>
                                 <li><a href="https://wordpress.org/plugins/wordpress-popular-posts/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> WordPress Popular Posts</a></li>
-                                <li><a href="https://wordpress.org/plugins/amp/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> AMP Pages</a></li>
-                                <li><a href="https://wordpress.org/plugins/menu-image/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Menu image, icons, svg...</a></li>
+                                <li><a href="https://wordpress.org/plugins/classic-editor/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Classic Editor</a></li>
+                                <li><a href="https://wordpress.org/plugins/siteorigin-panels/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Page Builder</a></li>
                                 <li><a href="https://es.wordpress.org/plugins/filebird/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> File Bird</a></li>
                                 <li><a href="https://wordpress.org/plugins/broken-link-checker/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Broken Link Checker (también para SEO)</a></li>
+                                <li><a href="https://wordpress.org/plugins/the-events-calendar/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Events Calendar</a></li>
+                                <li><a href="https://wordpress.org/plugins/amp/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> AMP Pages</a></li>
+                            </ul>
+                        </div>
+
+                        <div class="col-xs-12 col-md-6">
+                            <h6>Menú y Navegación</h6>
+                            <ul class="list-unstyled link-list">
+                                <li><a href="https://es.wordpress.org/plugins/megamenu/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Max megamenu</a></li>
+                                <li><a href="https://es.wordpress.org/plugins/sticky-menu-or-anything-on-scroll/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Sticky Menu</a></li>
+                                <li><a href="https://wordpress.org/plugins/menu-image/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Menu image, icons, svg...</a></li>
+                            </ul>
+                        </div>
+
+                        <div class="col-xs-12 col-md-6">
+                            <h6>Próximamente / mantenimiento</h6>
+                            <ul class="list-unstyled link-list">
                                 <li><a href="https://es.wordpress.org/plugins/coming-soon/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Coming Soon, Under Construction, Maintenance</a></li>
                                 <li><a href="https://es.wordpress.org/plugins/maintenance/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Maintenance</a></li>
                                 <li><a href="https://es.wordpress.org/plugins/wp-maintenance-mode/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> WP Maintenance Mode</a></li>
-                                <li><a href="https://wordpress.org/plugins/the-events-calendar/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Events Calendar</a></li>
                             </ul>
                         </div>
 
