Added some content and shortcodes links

--- a/index.html
+++ b/index.html
@@ -635,9 +635,11 @@
                             <ul class="list-unstyled link-list">
                                 <li><a href="https://wordpress.org/plugins/advanced-custom-fields/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Advanced Custom Fields (ACF y ACF Pro)</a></li>
                                 <li><a href="https://es.wordpress.org/plugins/shortcoder/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Shortcoder</a></li>
+                                <li><a href="https://wordpress.org/plugins/shortcodes-ultimate/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Shortcode Ultimate</a></li>
                                 <li><a href="https://es.wordpress.org/plugins/list-category-posts/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> List Category Posts</a></li>
                                 <li><a href="https://wordpress.org/plugins/yet-another-related-posts-plugin/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Yet another related post plugin (YARPP)</a></li>
                                 <li><a href="https://wordpress.org/plugins/wordpress-popular-posts/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> WordPress Popular Posts</a></li>
+                                <li><a href="https://es.wordpress.org/plugins/page-list/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Page List</a></li>
                                 <li><a href="https://wordpress.org/plugins/classic-editor/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Classic Editor</a></li>
                                 <li><a href="https://wordpress.org/plugins/siteorigin-panels/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Page Builder</a></li>
                                 <li><a href="https://es.wordpress.org/plugins/filebird/" target="_blank"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> File Bird</a></li>
