--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>ARG0120CL. Guía de Referencia</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css?r=20200912T1520">
 </head>
 <body>
     <nav class="navbar navbar-default">
