Added widget reference to the main giude.

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                         <dd><a href="#guttemberg">Editor de bloques</a></dd>
                         <dd><a href="#pages">Páginas</a></dd>
                         <dd><a href="#posts">Entradas / Posts</a></dd>
-                        <dd><a href="#categories">Categorías</a></dd>
-                        <dd><a href="#tags">Etiquetas</a></dd>
+                        <dd><a href="#categories">Categorías y etiquetas</a></dd>
                         <dd><a href="#comments">Comentarios</a></dd>
                         <dd><a href="#menus">Menús</a></dd>
+                        <dd><a href="#widgets">Widgets</a></dd>
                         <dd><a href="#media">Media</a></dd>
                     </dl>
                     <dl>
@@ -508,6 +508,20 @@
                     </ul>
 
 
+                    <h3 id="widgets">Widgets</h3>
+                    <blockquote>
+                        <p>Los widgets son un tipo de contenido en WordPress que está pensado para poder mostrarse en determinadas zonas habilitadas por el tema (normalmente en sidebars, footers, etc.). Exiten varios tipos de widgets con la instalación básica de WordPress, pero además muchos plugins añaden los suyos propios.</p>
+                    </blockquote>
+
+                    <ul class="list-unstyled link-doc">
+                        <li><a href="https://wordpress.com/es/support/widgets/" target="_blank"><span class="glyphicon glyphicon-hand-right" aria="hidden"></span> Ayuda oficial. Widgets</a></li>
+                    </ul>
+
+                    <p>Si bien los widgets están ideados para mostrarse en las zonas habituales habilitadas por el tema, existen plugins que permiten extender sus ubicaciones a prácticamente cualquier logar de un contenido editable, por ejemplo a través de shortcodes. Esto amplía muchísimo las posibilidades de los mismos, la tener lo bueno de su gestión y lo potente de su inyección vía shortcode.</p>
+
+                    <ul class="list-unstyled link-list">
+                        <li><a href="https://es.wordpress.org/plugins/amr-shortcode-any-widget/" target="_blank"><span class="glyphicon glyphicon-education" aria-hidden="true"></span> Amr Widget Shortcode (para usar cualquier widget como shortcode)</a></li>
+                    </ul>
 
                     <h3 id="media">Media</h3>
                     <blockquote>
